# MixMatch

./: .editorconfig  .gitignore
.github/workflows/: build-package-publish.yml  test.yml
backend/: Dockerfile  MANIFEST.in  development.env  pyproject.toml  requirements.txt  setup.cfg  setup.py
backend/docker/etc/: health_check.sh
backend/docker/etc/s6-overlay/s6-rc.d/init-adduser/: run
backend/docker/etc/s6-overlay/s6-rc.d/init-db-migration/: run
backend/docker/etc/s6-overlay/s6-rc.d/svc-mixmatch/: run
backend/docker/etc/s6-overlay/s6-rc.d/svc-mixmatch-scheduler/: run
backend/docker/etc/s6-overlay/s6-rc.d/svc-mixmatch-worker/: run
backend/mixmatch/: __init__.py  __main__.py  alembic.ini  app.py  celery.py
backend/mixmatch/alembic/: env.py
backend/mixmatch/alembic/versions/: 077d28a4ac67_default_tasks.py  1ac0af1dac94_user_sessions.py  56c7ed2bd2fa_unaccent_extension.py  b7db86f55625_initial.py  cb65b786c172_default_users.py
backend/mixmatch/api/: api.py  utils.py
backend/mixmatch/api/endpoints/: genre.py  health.py  login.py  music.py  playlist.py  playlist_item.py  playlist_items.py  playlists.py  task.py  tracks.py  users.py
backend/mixmatch/core/: settings.py  types.py  utils.py
backend/mixmatch/db/: crud.py  database.py  functions.py  models.py
backend/mixmatch/db/filters/: enums.py  sorting.py
backend/mixmatch/file/: __init__.py  file.py  utils.py  validators.py
backend/mixmatch/security/: middleware.py
backend/mixmatch/tasks/: __init__.py  signal_handlers.py  tasks.py  utils.py
backend/tests/: fixtures.py  test_api.py  test_utils.py  test_validators.py  utils.py
backend/tests/resources/: genres.txt
backend/tests/resources/docker/: docker-compose.yml
docs/: README.md  deploy-with-docker-compose.md
docs/images/: mixmatch-overview-components.drawio
docs/resources/: docker-compose.yml
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/docker/etc/confd/conf.d/: nginx-default.toml
frontend/docker/etc/confd/templates/: nginx-default.conf.tmpl
frontend/docker/etc/nginx/: nginx.conf
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  interfaces.ts  models.ts
frontend/src/app/components/audio-player/: audio-player.component.html  audio-player.component.ts
frontend/src/app/components/button-rating/: button-rating.component.html  button-rating.component.spec.ts  button-rating.component.ts
frontend/src/app/components/button-stats/: button-stats.component.html  button-stats.component.spec.ts  button-stats.component.ts
frontend/src/app/components/button-toggle-order/: button-toggle-order.component.html  button-toggle-order.component.spec.ts  button-toggle-order.component.ts
frontend/src/app/components/modal-delete-confirmation/: modal-delete-confirmation.component.html
frontend/src/app/components/modal-music-filter/: modal-music-filter.component.html  modal-music-filter.component.spec.ts  modal-music-filter.component.ts
frontend/src/app/components/modal-playlist-add/: modal-playlist-add.component.html  modal-playlist-add.component.spec.ts  modal-playlist-add.component.ts
frontend/src/app/components/modal-playlist-edit/: modal-playlist-edit.component.html  modal-playlist-edit.component.spec.ts  modal-playlist-edit.component.ts
frontend/src/app/components/modal-playlist-item-add/: modal-playlist-item-add.component.html  modal-playlist-item-add.component.spec.ts  modal-playlist-item-add.component.ts
frontend/src/app/components/modal-track-filter/: modal-track-filter.component.html  modal-track-filter.component.spec.ts  modal-track-filter.component.ts
frontend/src/app/components/modal-user-add/: modal-user-add.component.html  modal-user-add.component.spec.ts  modal-user-add.component.ts
frontend/src/app/components/modal-user-reset/: modal-user-reset.component.html  modal-user-reset.component.spec.ts  modal-user-reset.component.ts
frontend/src/app/components/music-item-table/: music-item-table.component.html  music-item-table.component.spec.ts  music-item-table.component.ts
frontend/src/app/components/music-list/: music-list.component.html  music-list.component.ts
frontend/src/app/components/navbar-resources/: navbar-resources.component.html  (+2 more)
frontend/src/app/services/: audio.service.ts  mixmatch.service.spec.ts  mixmatch.service.ts  notification.service.ts
(+48 files in other folders)
