[build-system]
requires = ["setuptools >= 72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mixmatch"
version = "0.0.1"
requires-python = ">=3.11, <3.12"
dependencies = [
    "alembic==1.16.1",
    "argon2-cffi==23.1.0",
    "cachetools==6.0.0",
    "celery[sqlalchemy]==5.5.2",
    "cron-validator==1.0.8",
    "click==8.2.1",
    "essentia==2.1b6.dev1110",
    "fastapi==0.115.12",
    "fastapi-pagination==0.13.1",
    "mutagen==1.47.0",
    "numpy<2.0.0",  # required for essentia==2.1b6.dev1110
    "prettytable==3.16.0",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.20",
    "sqlmodel==0.0.24",
    "uvicorn[standard]==0.34.3"
]

[project.optional-dependencies]
dev = ["bump-my-version==1.1.4", "httpx==0.28.1", "pytest==8.3.5", "tox==4.26.0", "Faker==37.3.0"]

[project.scripts]
mixmatch = "mixmatch.__main__:main"

[tool.setuptools.packages.find]
include = ["mixmatch", "mixmatch.*"]

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "mixmatch/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["3.11"]

[tool.tox.env_run_base]
description = "run unit tests"
extras = ["dev"]
set_env = {BASE_DIRECTORY="{envtmpdir}", IMAGE_DIRECTORY="{envtmpdir}/images", MUSIC_DIRECTORY="{envtmpdir}"}
commands = [["pytest", "tests"]]
