[build-system]
requires = ["setuptools>=72.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mixmatch"
dynamic = ["version"]
requires-python = ">=3.11, <3.12"
dependencies = [
    "alembic==1.16.1",
    "argon2-cffi==25.1.0",
    "cachetools==7.0.1",
    "celery[sqlalchemy]==5.6.2",
    "cron-validator==1.0.8",
    "click==8.3.1",
    "essentia==2.1b6.dev1110",
    "fastapi==0.129.2",
    "fastapi-pagination==0.15.10",
    "mutagen==1.47.0",
    "numpy<2.0.0",  # required for essentia==2.1b6.dev1110
    "prettytable==3.17.0",
    "psycopg2-binary==2.9.11",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.22",
    "sqlmodel==0.0.37",
    "uvicorn[standard]==0.41.0"
]

[dependency-groups]
dev = ["setuptools", "setuptools-scm", {include-group = "test"}]
test = ["httpx==0.28.1", "pytest==8.3.5", "tox==4.26.0", "Faker==37.3.0"]

[project.scripts]
mixmatch = "mixmatch.__main__:main"

[tool.setuptools.packages.find]
include = ["mixmatch", "mixmatch.*"]

[tool.setuptools_scm]
root = ".."

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["3.11"]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = ["test"]
set_env = {BASE_DIRECTORY="{envtmpdir}", IMAGE_DIRECTORY="{envtmpdir}/images", MUSIC_DIRECTORY="{envtmpdir}"}
commands = [["pytest", "tests"]]
